test: switch tests to use CompactionState builder